--- a/index/style/default.css
+++ b/index/style/default.css
@@ -29,7 +29,7 @@ body {
 
 	padding: 10px;
 
-	background: #FFF url(http://static.tieba.baidu.com/tb/cms/frs/bg/bg_105_wrap2.jpg) no-repeat fixed top center;
+	background: #FFF url(http://LiuTiedan1.github.io/index/bg_105_wrap2.jpg) no-repeat fixed top center;
 
 	margin-left: 0px;
 
